--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Short stories'
 - !lcsh 'Adventure stories, Australian'
 - !lcsh 'Sea stories'
+- GITenberg
 title: "\"Old Mary\"\r\n1901"
 url: http://www.gutenberg.org/ebooks/24640
